<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgClr"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Reciever Information"
        android:textSize="30sp"
        android:textColor="@color/senderDetailstxtclr"
        android:background="@color/senderDetailsbgclr"
        android:id="@+id/recieverDetailsHeading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/recieverDetailsHeading"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="50dp"
        android:layout_marginTop="30dp"
        android:id="@+id/recieverDetailsForm"
        android:layout_marginRight="@dimen/senderFormMarginLeftRight"
        android:layout_marginLeft="@dimen/senderFormMarginLeftRight"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHintText"
            android:padding="15dp"
            android:id="@+id/receiverEmail"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_standard_inside_form"
            android:inputType="textPersonName"
            android:hint="@string/nameHintText"
            android:padding="15dp"
            android:id="@+id/receiverName"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_standard_inside_form"
            android:inputType="number"
            android:hint="@string/contactHintText"
            android:padding="15dp"
            android:id="@+id/receiverContact"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_standard_inside_form"
            android:inputType="text"
            android:hint="@string/countryHintText"
            android:padding="15dp"
            android:id="@+id/receiverCountry"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_standard_inside_form"
            android:inputType="text"
            android:hint="@string/addressHintText"
            android:padding="15dp"
            android:id="@+id/receiverAddress"
            />

    </LinearLayout>

    <Button
        app:layout_constraintTop_toBottomOf="@id/recieverDetailsForm"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_height="wrap_content"
        android:text="@string/nextButtonText"
        android:textSize="24sp"
        android:textColor="@color/senderDetailstxtclr"
        android:backgroundTint="@color/senderDetailsbgclr"
        android:id="@+id/receiverNextbutton"

        />

</androidx.constraintlayout.widget.ConstraintLayout>